--- a/Node.js/Swagger-Study/package.json
+++ b/Node.js/Swagger-Study/package.json
@@ -1,11 +1,18 @@
 {
   "name": "swagger-study",
   "version": "1.0.0",
-  "description": "swagger study",
+  "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "eslint **/*.js --ignore-pattern node_modules/ && node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Wonjun Kim",
-  "license": "ISC"
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.3",
+    "morgan": "^1.9.0",
+    "swagger-ui": "^3.15.0",
+    "swagger-ui-dist": "^3.16.0"
+  }
 }
