--- a/Node.js/JWT-Study/package.json
+++ b/Node.js/JWT-Study/package.json
@@ -4,8 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "eslint **/*.js --ignore-pattern node_modules/ && node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Wonjun Kim",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.3",
+    "install": "^0.11.0",
+    "jsonwebtoken": "^8.2.1",
+    "mongoose": "^5.1.3",
+    "morgan": "^1.9.0"
+  }
 }
